Playback set start/end operators can set rendering range fields to negative frames #81380

Closed
opened 2020-10-02 13:52:37 +02:00 by Tomasz Kaye · 7 comments

System Information
Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-26 20:04, hash: 8c81b3fb8b

Short description of error

Original report: The playback/rendering range fields (top right of Timeline view) can't be set to negative frames directly, this should be possible.

This is not a bug
Screenshot 2020-10-02 at 13.44.30.png

Original report: This range can be set to begin on a negative frame by moving the playhead to a negative frame and then using Timeline > Playback > 'Set Start Frame' button,

This is a bug
Screenshot 2020-10-02 at 13.47.09.png

Exact steps for others to reproduce the error

  • Enable "Allow Negative Frames" in preferences
    Screenshot 2020-10-02 at 13.50.44.png
  • Try to change the Start field to a number below 0 (it clamps to 0)
**System Information** Operating system: Darwin-19.3.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.5.5 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-26 20:04, hash: `8c81b3fb8b` **Short description of error** > Original report: The playback/rendering range fields (top right of Timeline view) can't be set to negative frames directly, this should be possible. This is not a bug ![Screenshot 2020-10-02 at 13.44.30.png](https://archive.blender.org/developer/F8946888/Screenshot_2020-10-02_at_13.44.30.png) > Original report: This range *can* be set to begin on a negative frame by moving the playhead to a negative frame and then using Timeline > Playback > 'Set Start Frame' button, This is a bug ![Screenshot 2020-10-02 at 13.47.09.png](https://archive.blender.org/developer/F8946896/Screenshot_2020-10-02_at_13.47.09.png) **Exact steps for others to reproduce the error** * Enable "Allow Negative Frames" in preferences ![Screenshot 2020-10-02 at 13.50.44.png](https://archive.blender.org/developer/F8946901/Screenshot_2020-10-02_at_13.50.44.png) * Try to change the Start field to a number below 0 (it clamps to 0)
Author

Added subscriber: @info-27

Added subscriber: @info-27
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-10-05 15:14:21 +02:00
Member

Can confirm some sort of inconsistency.

I assume though that not allowing negative frames for scene render is actually the right thing to do, see the comment in rna_Scene_start_frame_set:

/* MINFRAME ... since some output formats can't take negative frames */

On the other hand, there is the Allow Negative Frames option, introduced in 21a2350248.
This commit claims:

This setting only applies when setting the current frame by scrubbing the time cursor in a timeline view, or by typing a value into the current frame number field.

And the documentation https://docs.blender.org/manual/en/dev/editors/preferences/animation.html#timeline says

Playback and animations can occur during negative frame ranges.

I am reading this as "setting current frame to a negative value should be allowed, setting the preview range to a negative value should be allowed, however setting the scene render startframe/endframe should never be allowed.
But as we can see there are a couple of places where we can end up with negative framenumbers for scene render.
Therefore, this looks like a bug.
(The whole thing might also be considered designed schizophrenia :), but for now lets make sure we dont end up with negative in scene render.)

Related:

  • #42151 (Can't set negative Frame start)
  • #70473 (It is not possible to start at negative frame)
  • #52872 (Toggle "Playback Negative Frames" not working)
Can confirm some sort of inconsistency. I assume though that not allowing negative frames for scene render is actually the right thing to do, see the comment in `rna_Scene_start_frame_set`: ``` /* MINFRAME ... since some output formats can't take negative frames */ ``` On the other hand, there is the `Allow Negative Frames` option, introduced in 21a2350248. This commit claims: > This setting only applies when setting the current frame by scrubbing the time cursor in a timeline view, or by typing a value into the current frame number field. And the documentation https://docs.blender.org/manual/en/dev/editors/preferences/animation.html#timeline says > Playback and animations can occur during negative frame ranges. I am reading this as "setting current frame to a negative value should be allowed, setting the preview range to a negative value should be allowed, however setting the scene render startframe/endframe should **never** be allowed. But as we can see there are a couple of places where we can end up with negative framenumbers for scene render. Therefore, this looks like a bug. (The whole thing might also be considered *designed schizophrenia* :), but for now lets make sure we dont end up with negative in scene render.) Related: - #42151 (Can't set negative Frame start) - #70473 (It is not possible to start at negative frame) - #52872 (Toggle "Playback Negative Frames" not working)
Philipp Oeser changed title from Playback/rendering range fields can't be set to negative frames to Playback set start/end operators can set rendering range fields to negative frames 2020-10-05 15:38:40 +02:00
Member

I have change the task description to reflect what is considered a bug and what isnt.

I have change the task description to reflect what is considered a bug and what isnt.

This issue was referenced by ca38bce46a

This issue was referenced by ca38bce46aa292654451fa34fc33b88fc5ca72f0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81380
No description provided.